[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cvu-intelligence-app"
version = "0.1.0"
description = "Streamlit-based generator for CVU Intelligence Reports, with WordPress publish integration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "CVU" }]
dependencies = [
    "streamlit>=1.32",
    "mysql-connector-python>=8.4",
    "psycopg2-binary>=2.9",
    "requests>=2.31",
    "pycountry>=23.12",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
]

[tool.setuptools.packages.find]
include = ["cvu_intelligence_core*"]
